[gd_scene load_steps=7 format=3 uid="uid://cbyly3wmnyc7f"]

[ext_resource type="Script" uid="uid://fnqb6n4mpual" path="res://scripts/player.gd" id="1_qfm1y"]
[ext_resource type="Texture2D" uid="uid://cuugysml1is5l" path="res://assets/sprites/player/body/base_animation.png" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://doxquy2kyfvq6" path="res://assets/sprites/player/hair/hairstyle_1.png" id="3_tuyoq"]
[ext_resource type="Texture2D" uid="uid://d3mlrrpexfx8o" path="res://assets/sprites/player/outfit/outfit_1.png" id="4_fjrip"]
[ext_resource type="Texture2D" uid="uid://bug6lkhbt4qx1" path="res://assets/sprites/player/hats/hat_1.png" id="5_smehm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qlg0r"]
radius = 8.0
height = 32.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_qfm1y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_qlg0r")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_speed = 20.0

[node name="Skeleton" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("2_qlg0r")
hframes = 8
vframes = 8

[node name="Hair" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("3_tuyoq")
hframes = 8
vframes = 8

[node name="Outfit" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("4_fjrip")
hframes = 8
vframes = 8

[node name="Hat" type="Sprite2D" parent="Skeleton"]
texture = ExtResource("5_smehm")
hframes = 8
vframes = 8

[node name="Staff" type="Sprite2D" parent="Skeleton"]

[node name="Name" type="Label" parent="Skeleton"]
offset_right = 40.0
offset_bottom = 23.0

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
